@@ -1,6 +1,8 @@
 22 April 2010: Wouter
 	- tag 1.4.4.
 	- trunk contains 1.4.5 in development.
+	- Fix validation failure for qtype ANY caused by a RRSIG parse failure.
+	  The validator error message was 'no signatures from ...'.
 
 16 April 2010: Wouter
 	- more portability defines for CMSG_SPACE, CMSG_ALIGN, CMSG_LEN.
